name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pdmurray/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Murray
maintainer:          pdmurray@gmail.com
copyright:           2017 Patrick Murray
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split